--- a/NewJFrame.form
+++ b/NewJFrame.form
@@ -105,6 +105,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="50"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="throwcountTextFieldActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane2">
           <AuxValues>
