--- a/NewJFrame.form
+++ b/NewJFrame.form
@@ -49,7 +49,7 @@
                                   </Group>
                               </Group>
                               <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="jLabel4" alignment="0" pref="216" max="32767" attributes="0"/>
+                                  <Component id="computerChoiceLabel" alignment="0" pref="216" max="32767" attributes="0"/>
                                   <Component id="jLabel5" alignment="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
@@ -67,7 +67,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="21" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
               <Group type="102" attributes="0">
                   <Component id="jButton1" min="-2" max="-2" attributes="0"/>
@@ -81,8 +81,8 @@
                       <Component id="AILabel" min="-2" max="-2" attributes="0"/>
                       <Component id="jScrollPane2" min="-2" pref="75" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="57" max="32767" attributes="0"/>
+                  <Component id="computerChoiceLabel" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
@@ -195,9 +195,9 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JLabel" name="jLabel4">
+        <Component class="javax.swing.JLabel" name="computerChoiceLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Computer Choice"/>
+            <Property name="text" type="java.lang.String" value="Computer Choice: "/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
